--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   redis:
-    image: redis-stack:latest
+    image: redis:alpine
     restart: always
     ports:
       - "6379:6379"
